# ove.run

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  website.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AgentSettings.ts  AgentStatus.ts  AgentType.ts  AppSettings.ts  ArbiterStateRow.ts  Consolidation.ts  ContextUnit.ts  GlobalSettings.ts  Memory.ts  Project.ts  QualityGateConfig.ts  Story.ts  TrustLevel.ts
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  memory_worker.rs  state.rs
src-tauri/src/agents/: detection.rs  mod.rs  registry.rs
src-tauri/src/arbiter/: actions.rs  dispatch.rs  mod.rs  prompts.rs
src-tauri/src/bugs/: github.rs  jira.rs  mod.rs  oauth.rs  provider.rs  store.rs  youtrack.rs
src-tauri/src/bundled/: mcp_units.rs  mod.rs  personas.rs  seed.rs  skills.rs
src-tauri/src/commands/: agent_commands.rs  arbiter_commands.rs  bugs_commands.rs  context_commands.rs  git_commands.rs  knowledge_commands.rs  loop_commands.rs  mcp_commands.rs  memory_commands.rs  mod.rs  notes_commands.rs  project_commands.rs  pty_commands.rs  sandbox_commands.rs  session_commands.rs  settings_commands.rs  update_commands.rs
src-tauri/src/db/: app_state.rs  arbiter_state.rs  bugs.rs  context.rs  init.rs  memory.rs  mod.rs  notes.rs  projects.rs  sessions.rs  settings.rs  stories.rs
src-tauri/src/git/: operations.rs
src-tauri/src/knowledge/: store.rs
src-tauri/src/loop_engine/: mod.rs  (+5 more)
(+213 files in other folders)
